--- a/tmux.conf
+++ b/tmux.conf
@@ -27,15 +27,15 @@ set -g mouse on
 
 # status bar, thanks http://zanshin.net/2013/09/05/my-tmux-configuration/
 # for the sweet colors.
-set -g status-interval 3
-set-option -g status-bg colour237
-set-option -g status-fg white
-set-option -g status-attr dim 
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg colour236 
-set-window-option -g window-status-attr dim
-set -g status-left ' #S ::'
-set -g status-right ' #(uptime | egrep -o "[0-9]+ users?, +load.*" | sed "s/ averages//"), %H:%M '
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg colour236 
-set-window-option -g window-status-current-attr bright
+#set -g status-interval 3
+#set-option -g status-bg colour237
+#set-option -g status-fg white
+#set-option -g status-attr dim 
+#set-window-option -g window-status-fg brightblue #base0
+#set-window-option -g window-status-bg colour236 
+#set-window-option -g window-status-attr dim
+#set -g status-left ' #S ::'
+#set -g status-right ' #(uptime | egrep -o "[0-9]+ users?, +load.*" | sed "s/ averages//"), %H:%M '
+#set-window-option -g window-status-current-fg brightred #orange
+#set-window-option -g window-status-current-bg colour236 
+#set-window-option -g window-status-current-attr bright
