--- a/tmux.conf
+++ b/tmux.conf
@@ -39,3 +39,5 @@ set -g mouse on
 #set-window-option -g window-status-current-fg brightred #orange
 #set-window-option -g window-status-current-bg colour236 
 #set-window-option -g window-status-current-attr bright
+
+# revisar tmux.conf de pelado (youtube)
