--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,7 @@
 
 # set color
 set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm*Tc"
 
 # change split panels
 unbind %
